# NSFWtextual

./: .pre-commit-config.yaml  .pylintrc  GEMINI.md  README.md  mypy.ini  pyproject.toml
.gemini/: settings.json
src/: main.py
src/nsfw/: detector_worker.py  settings_screen.py
src/nsfw/tcss/: main.tcss
src/nsfwtextual/: settings_screen.py
src/nsfwtextual/tcss/: main.tcss
src/tcss/: main.tcss
